<resources>
    <string name="app_name">Speed Dating</string>
    <string name="afficher_la_liste_des_personnes_inscrites">Afficher la liste des personnes inscrites</string>

    <string name="page_de_connexion">Page de connexion</string>
    <string name="app_description">Bienvenue sur notre application de speed dating,\nici vous pouvez ajouter des rencontres avec des personnes rencontrer ou a rencontrer et notamant avec les autres utilisateurs.\n\nMerci de vous inscrire ou de vous connectez si vous avez deja un compte</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>

    <string name="page_d_inscription">Page d\'inscription</string>

    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="profil">Profil</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="aide">Aide</string>
    <string name="pseudo">Pseudo</string>
    <string name="Parameter">Parametres</string>
    <string name="ajouter_une_rencontre">Ajouter une rencontre</string>
    <string name="ajouter_une_personne">Ajouter une personne</string>


    <string name="addDateTitle">Bienvenue sur la page des ajout de rencontre</string>
    <string name="addDateDescription">Nous vous conseillons d\'abord d\'ajouter la personne rencontree ou a rencontree</string>
    <string name="shareDate">Partage</string>

    <string name="listDateTitle">Bienvenue sur la page des liste de rencontre</string>
    <string name="listDateDate">Date de la rencontre : %s</string>
    <string name="listDateComment">Commentaire : %s</string>
    <string name="listDateNote">Note de la rencontre : %d</string>


    <string name="addPeopleTitle">Bienvenue sur la page des ajout des personnes</string>

    <string name="listPeopleTitle">Bienvenue sur la page des personne ajouter</string>
    <string name="listPeopleFirstName">Prenom : %s</string>
    <string name="listPeopleLastName">Nom : %s</string>
    <string name="listPeopleSexe">Sexe : %s</string>
    <string name="listPeopleBirthdate">Date de naissance : %s</string>


    <string name="selected_item">Selected item:</string>
    <string name="people_list">Liste des personnes enregister</string>
    <string name="date_list">Liste des rencontre enregister</string>
    <string name="comment">commentaire</string>
    <string name="Datedate">Set date for date</string>
    <string name="add_date">Ajouter une rencontre</string>
    <string name="personne_list">Personne : %s</string>
    <string name="add_btn_string_date">Ajouter une rencontre</string>
    <string name="add_lastName_string">Nom de famille :</string>
    <string name="add_firstName_string">Prenom :</string>
    <string name="add_sexe_string">Sexe :</string>
    <string name="add_birthdate_string">Date de naissance :</string>
    <string name="search_user">Rechercher un utilisateur :</string>
    <string name="App_Name">Speed Dating Industrie</string>
    <string name="login_string_email">Email :</string>
    <string name="login_string_password">Mot de passe :</string>
    <string name="list_date_name">Rencontre du : %s</string>
    <string name="textListPeople">%s</string>
    <string name="note_people">Note de la personne :</string>
    <string name="register_pseudo">Pseudo :</string>
    <string name="register_email">Email :</string>
    <string name="register_password">Password :</string>
    <string-array name="NoteDate">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="NotePeople">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

</resources>